# interactions_compiler

./: Cargo.toml  README.md  shell.nix
examples/: index.html  record.json
src/: cli_arguments.yml  lib.rs  main.rs
src/code_generator/: mod.rs
src/code_generator/zest/: mod.rs
src/code_generator/zest/statement/: action_print.rs  client_element_click.rs  client_element_send_keys.rs  client_launch.rs  client_window_close.rs  mod.rs
src/code_generator/zest/statement/client_element_click/: mod.rs
src/code_generator/zest/statement/selector/: css_selector.rs  mod.rs
src/html/: mod.rs  tag.rs
src/interaction_event/: mod.rs
src/interaction_event/dom_interaction/: dom_element.rs  dom_event.rs  mod.rs
src/interaction_event/dom_interaction/dom_element/: mod.rs
src/interaction_event/simplifier/: mod.rs
src/interaction_event/simplifier/strategy/: mod.rs  squash_double_clicks.rs  state.rs
