[package]
name = "interactions_compiler"
version = "0.1.0"
authors = ["Pamplemousse <xav.maso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-json-diff = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
