[package]
name = "interactions_compiler"
version = "0.1.0"
authors = ["Pamplemousse <xav.maso@gmail.com>"]
description = "Translate a \"front-end-tracker trace\" of user interactions into a usable ZAP script."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-json-diff = "1.0"
clap = { version = "2.33.0", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.3", features = ["js", "v4"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
